@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
-from copy import deepcopy
 from distutils.version import LooseVersion
 from urllib2 import unquote
+from cms.admin.dialog.forms import PermissionForm
 import warnings
 from django.template.response import TemplateResponse
 from django.contrib.admin.helpers import AdminForm
@@ -32,10 +32,9 @@ from django.views.decorators.http import require_POST
 
 from cms.admin.change_list import CMSChangeList
 from cms.admin.dialog.views import get_copy_dialog
-from cms.admin.forms import PageForm, PageAddForm, PageTitleForm
-from cms.admin.permissionadmin import (PAGE_ADMIN_INLINES, PagePermissionInlineAdmin, ViewRestrictionInlineAdmin)
+from cms.admin.forms import PageForm, PageTitleForm, AdvancedSettingsForm, PagePermissionForm
+from cms.admin.permissionadmin import (PERMISSION_ADMIN_INLINES, PagePermissionInlineAdmin, ViewRestrictionInlineAdmin)
 from cms.admin.views import revert_plugins
-from cms.apphook_pool import apphook_pool
 from cms.exceptions import PluginLimitReached
 from cms.models import Page, Title, CMSPlugin, PagePermission, PageModeratorState, EmptyTitle, GlobalPagePermission, \
     titlemodels
@@ -43,8 +42,7 @@ from cms.models.managers import PagePermissionsPermissionManager
 from cms.models.placeholdermodel import Placeholder
 from cms.plugin_pool import plugin_pool
 from cms.templatetags.cms_admin import admin_static_url
-from cms.utils import copy_plugins, helpers, moderator, permissions, plugins, get_template_from_request, \
-    get_language_from_request, admin as admin_utils, cms_static_url
+from cms.utils import copy_plugins, helpers, moderator, permissions, get_language_from_request, admin as admin_utils, cms_static_url
 from cms.utils.i18n import get_language_list, get_language_tuple, get_language_object
 from cms.utils.page_resolver import is_valid_url
 from cms.utils.admin import jsonify_request
@@ -52,7 +50,6 @@ from cms.utils.admin import jsonify_request
 from cms.utils.permissions import has_global_page_permission
 from cms.utils.plugins import current_site
 from cms.plugins.utils import has_reached_plugin_limit
-from menus.menu_pool import menu_pool
 
 DJANGO_1_4 = LooseVersion(django.get_version()) < LooseVersion('1.5')
 require_POST = method_decorator(require_POST)
@@ -68,82 +65,15 @@ else: # pragma: no cover
 PUBLISH_COMMENT = "Publish"
 
 
-def contribute_fieldsets(cls):
-    if get_cms_setting('MENU_TITLE_OVERWRITE'):
-        general_fields = ['title', 'page_title', 'menu_title']
-    else:
-        general_fields = ['title', 'page_title']
-    general_fields += ['slug', 'meta_description', ('published', 'in_navigation')]
-    additional_hidden_fields = []
-    advanced_fields = ['reverse_id', 'overwrite_url', 'redirect', 'login_required', 'limit_visibility_in_menu']
-    template_fields = ['template']
-    hidden_fields = ['site', 'parent']
-    if get_cms_setting('SOFTROOT'):
-        advanced_fields.append('soft_root')
-    if get_cms_setting('SHOW_START_DATE') and get_cms_setting('SHOW_END_DATE'):
-        general_fields.append(('publication_date', 'publication_end_date'))
-    elif get_cms_setting('SHOW_START_DATE'):
-        general_fields.append('publication_date')
-    elif get_cms_setting('SHOW_END_DATE'):
-        general_fields.append('publication_end_date')
-    if not get_cms_setting('URL_OVERWRITE'):
-        advanced_fields.remove("overwrite_url")
-    if not get_cms_setting('REDIRECTS'):
-        advanced_fields.remove('redirect')
-    if menu_pool.get_menus_by_attribute("cms_enabled", True):
-        advanced_fields.append("navigation_extenders")
-    if apphook_pool.get_apphooks():
-        advanced_fields.append("application_urls")
-
-    fieldsets = [
-        (None, {
-            'fields': general_fields,
-            'classes': ('general',),
-        }),
-        (_('Basic Settings'), {
-            'fields': template_fields,
-            'classes': ('low',),
-            'description': _('Note: This page reloads if you change the selection. Save it first.'),
-        }),
-        (_('Hidden'), {
-            'fields': hidden_fields + additional_hidden_fields,
-            'classes': ('hidden',),
-        }),
-        (_('Advanced Settings'), {
-            'fields': advanced_fields,
-            'classes': ('collapse',),
-        }),
-    ]
-    setattr(cls, 'fieldsets', fieldsets)
-    setattr(cls, 'advanced_fields', advanced_fields)
-    setattr(cls, 'hidden_fields', hidden_fields)
-    setattr(cls, 'general_fields', general_fields)
-    setattr(cls, 'template_fields', template_fields)
-    setattr(cls, 'additional_hidden_fields', additional_hidden_fields)
-
-
-def contribute_list_filter(cls):
-    list_filter = ['published', 'in_navigation', 'template', 'changed_by']
-    if get_cms_setting('SOFTROOT'):
-        list_filter.append('soft_root')
-    setattr(cls, 'list_filter', list_filter)
-
-
 class PageAdmin(ModelAdmin):
     form = PageForm
-    # TODO: add the new equivalent of 'cmsplugin__text__body' to search_fields'
     search_fields = ('title_set__slug', 'title_set__title', 'reverse_id')
     revision_form_template = "admin/cms/page/history/revision_header.html"
     recover_form_template = "admin/cms/page/history/recover_header.html"
-
-    exclude = []
-    mandatory_placeholders = (
-        'title', 'slug', 'parent', 'site', 'meta_description', 'page_title', 'menu_title')
     add_general_fields = ['title', 'slug', 'language', 'template']
     change_list_template = "admin/cms/page/tree/base.html"
+    list_filter = ['published', 'in_navigation', 'template', 'changed_by', 'soft_root']
 
-    # take care with changing fieldsets, get_fieldsets() method removes some
-    # fields depending on permissions, but its very static!!
     add_fieldsets = [
         (None, {
             'fields': add_general_fields,
@@ -155,7 +85,7 @@ class PageAdmin(ModelAdmin):
         }),
     ]
 
-    inlines = PAGE_ADMIN_INLINES
+    inlines = PERMISSION_ADMIN_INLINES
 
     class Media:
         css = {
@@ -188,6 +118,8 @@ class PageAdmin(ModelAdmin):
                                 pat(r'clear-placeholder/([0-9]+)/$', self.clear_placeholder),
                                 pat(r'move-plugin/$', self.move_plugin),
                                 pat(r'^([0-9]+)/edit-title/$', self.edit_title),
+                                pat(r'^([0-9]+)/advanced-settings/$', self.advanced),
+                                pat(r'^([0-9]+)/permission-settings/$', self.permissions),
                                 pat(r'^([0-9]+)/delete-translation/$', self.delete_translation),
                                 pat(r'^([0-9]+)/move-page/$', self.move_page),
                                 pat(r'^([0-9]+)/copy-page/$', self.copy_page),
@@ -263,8 +195,6 @@ class PageAdmin(ModelAdmin):
             moderator.page_changed(obj, force_moderation_action=PageModeratorState.ACTION_CHANGED)
             revert_plugins(request, obj.version.pk, obj)
 
-        language = form.cleaned_data['language']
-
         if target is not None and position is not None:
             try:
                 target = self.model.objects.get(pk=target)
@@ -273,35 +203,14 @@ class PageAdmin(ModelAdmin):
             else:
                 obj.move_to(target, position)
 
-        Title.objects.set_or_create(
-            request,
-            obj,
-            form,
-            language,
-        )
-
-    def get_fieldsets(self, request, obj=None):
-        """
-        Add fieldsets of placeholders to the list of already existing
-        fieldsets.
-        """
-        #TODO: 3.0 one save
-        if obj: # edit
-            given_fieldsets = deepcopy(self.fieldsets)
-            if not obj.has_publish_permission(request):
-                fields = list(given_fieldsets[0][1]['fields'][2])
-                fields.remove('published')
-                given_fieldsets[0][1]['fields'][2] = tuple(fields)
-            advanced = given_fieldsets.pop(3)
-            if obj.has_advanced_settings_permission(request):
-                given_fieldsets.append(advanced)
-        else: # new page
-            given_fieldsets = deepcopy(self.add_fieldsets)
-
-        return given_fieldsets
-
-    def get_fieldset_placeholders(self, template):
-        return plugins.get_placeholders(template)
+        if not 'permission' in request.path:
+            language = form.cleaned_data['language']
+            Title.objects.set_or_create(
+                request,
+                obj,
+                form,
+                language,
+            )
 
     def get_form(self, request, obj=None, **kwargs):
         """
@@ -310,62 +219,48 @@ class PageAdmin(ModelAdmin):
         """
         # TODO: 3.0 remove 2 save steps
         language = get_language_from_request(request, obj)
-
+        if "advanced" in request.path:
+            form = super(PageAdmin, self).get_form(request, obj, form=AdvancedSettingsForm, **kwargs)
+        elif "permission" in request.path:
+            form = super(PageAdmin, self).get_form(request, obj, form=PagePermissionForm, **kwargs)
+        else:
+            form = super(PageAdmin, self).get_form(request, obj, form=PageForm, **kwargs)
         if obj:
-            self.inlines = PAGE_ADMIN_INLINES
-            if not obj.has_publish_permission(request) and not 'published' in self.exclude:
-                self.exclude.append('published')
-            elif 'published' in self.exclude:
-                self.exclude.remove('published')
-
-            if not get_cms_setting('SOFTROOT') and 'soft_root' in self.exclude:
-                self.exclude.remove('soft_root')
-
-            form = super(PageAdmin, self).get_form(request, obj, **kwargs)
+            if "permission" in request.path:
+                self.inlines = PERMISSION_ADMIN_INLINES
+            else:
+                self.inlines = []
             version_id = None
-            versioned = False
             if "history" in request.path or 'recover' in request.path:
-                versioned = True
                 version_id = request.path.split("/")[-2]
-
             try:
                 title_obj = obj.get_title_obj(language=language, fallback=False, version_id=version_id,
                                               force_reload=True)
             except titlemodels.Title.DoesNotExist:
                 title_obj = EmptyTitle()
-            if form.base_fields['site'].initial is None:
+            if 'site' in form.base_fields and form.base_fields['site'].initial is None:
                 form.base_fields['site'].initial = obj.site
-            for name in ['slug',
+            for name in [
+                'slug',
                 'title',
-                'application_urls',
-                'redirect',
                 'meta_description',
                 'menu_title',
                 'page_title']:
-                form.base_fields[name].initial = getattr(title_obj, name)
-            if title_obj.overwrite_url:
-                form.base_fields['overwrite_url'].initial = title_obj.path
-            else:
-                form.base_fields['overwrite_url'].initial = ""
-            if get_cms_setting('TEMPLATES'):
-                selected_template = get_template_from_request(request, obj)
-                template_choices = list(get_cms_setting('TEMPLATES'))
-                form.base_fields['template'].choices = template_choices
-                form.base_fields['template'].initial = force_unicode(selected_template)
-
-            if not obj.has_advanced_settings_permission(request):
-                for field in self.advanced_fields:
-                    del form.base_fields[field]
+                if name in form.base_fields:
+                    form.base_fields[name].initial = getattr(title_obj, name)
         else:
             self.inlines = []
-            form = PageAddForm
             for name in ['slug', 'title']:
                 form.base_fields[name].initial = u''
             form.base_fields['parent'].initial = request.GET.get('target', None)
             form.base_fields['site'].initial = request.session.get('cms_admin_site', None)
-            form.base_fields['template'].initial = get_cms_setting('TEMPLATES')[0][0]
-
         return form
+
+    def advanced(self, request, object_id):
+        return self.change_view(request, object_id)
+
+    def permissions(self, request, object_id):
+        return self.change_view(request, object_id, {'show_permissions': True})
 
     def get_inline_instances(self, request, obj=None):
         if DJANGO_1_4:
@@ -428,17 +323,13 @@ class PageAdmin(ModelAdmin):
             # to determine whether a given object exists.
             obj = None
         else:
-            selected_template = get_template_from_request(request, obj)
-
             #activate(user_lang_set)
             context = {
-                'placeholders': self.get_fieldset_placeholders(selected_template),
                 'page': obj,
                 'CMS_PERMISSION': get_cms_setting('PERMISSION'),
                 'ADMIN_MEDIA_URL': settings.STATIC_URL,
                 'can_change': obj.has_change_permission(request),
                 'can_change_permissions': obj.has_change_permissions_permission(request),
-                'can_publish': obj.has_publish_permission(request),
                 'show_delete_translation': len(obj.get_languages()) > 1,
                 'current_site_id': settings.SITE_ID,
             }
@@ -1565,8 +1456,5 @@ class PageAdmin(ModelAdmin):
             return render_to_response('admin/cms/page/plugin/confirm_form.html', context, RequestContext(request))
         return render_to_response('admin/cms/page/plugin/change_form.html', context, RequestContext(request))
 
-
-contribute_fieldsets(PageAdmin)
-contribute_list_filter(PageAdmin)
 
 admin.site.register(Page, PageAdmin)
